# ctrj

./: CMakeLists.txt  README.md  main.cpp
ctrj/: reader.cpp  reader.hpp  schema.hpp  value.hpp  writer.hpp
include/: ctrj.hpp
include/ctrj/: reader.hpp  schema.hpp  value.hpp  writer.hpp
test/: test_bench.cpp  test_bench.json  test_bench_rj.cpp  test_citm_catalogs.cpp  test_reader.cpp
